LocalDateTime to LocalDate migration / Visibility fixes

--- a/liquid-democracy-ui/src/app/header/header.component.css
+++ b/liquid-democracy-ui/src/app/header/header.component.css
@@ -32,6 +32,7 @@
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 1;
 }
 
 p-dropdown {
